--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
+    "@mui/x-data-grid": "^7.28.2",
     "@reduxjs/toolkit": "^2.6.1",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
