--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "concurrently \"vite \" \"json-server --watch db.json --port 8000\"",
     "dev": "vite",
     "server": "json-server --watch db.json --port 8000",
     "build": "tsc -b && vite build",
@@ -18,6 +19,7 @@
     "@mui/material": "^7.0.1",
     "@mui/x-data-grid": "^7.28.2",
     "@reduxjs/toolkit": "^2.6.1",
+    "concurrently": "^9.1.2",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
